--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^3.1.1",
     "recharts": "^2.8.0",
+    "swiper": "^11.2.10",
     "tailwindcss": "^3.3.0",
     "zod": "^3.22.0"
   },
