--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^3.1.1",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.8.0",
     "swiper": "^11.2.10",
     "tailwindcss": "^3.3.0",
