--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.0",
     "leaflet": "^1.9.4",
+    "mongoose": "^9.1.2",
     "next": "^14.0.0",
     "next-auth": "^4.24.0",
     "postcss": "^8.4.0",
@@ -32,7 +33,6 @@
     "react-leaflet-cluster": "^3.1.1",
     "react-markdown": "^10.1.0",
     "recharts": "^2.8.0",
-    "swiper": "^11.2.10",
     "tailwindcss": "^3.3.0",
     "zod": "^3.22.0"
   },
