--- a/package.json
+++ b/package.json
@@ -12,18 +12,17 @@
     "@ducanh2912/next-pwa": "^9.7.2",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.3.0",
+    "@prisma/client": "^5.10.2",
     "@types/leaflet": "^1.9.20",
     "autoprefixer": "^10.4.0",
-    "axios": "^1.12.2",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^10.18.0",
     "i18next": "^23.5.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.0",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "next": "^14.2.33",
-    "mongoose": "^9.1.2",
-    "next": "^14.0.0",
-    "next-auth": "^4.24.0",
     "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,12 +37,15 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "eslint": "^8.49.0",
     "eslint-config-next": "^14.0.0",
     "prettier": "^3.0.0",
+    "prisma": "^5.10.2",
     "typescript": "^5.2.0"
   },
   "engines": {
