--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "leaflet": "^1.9.4",
     "next": "^14.2.33",
     "postcss": "^8.4.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.0",
