--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "i18next-http-backend": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
+    "marked": "^17.0.1",
     "next": "^14.2.33",
     "postcss": "^8.4.0",
     "qrcode.react": "^4.2.0",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/marked": "^5.0.2",
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
